versions/1.6.6/MANUAL_zh.md
# Gaussian Splat COLMAP Dataset Generator 使用说明

## 插件定位

本插件用于在 Blender 5.1 中自动生成高斯泼溅训练所需的数据集。它复刻的是 Unreal to Gaussian Splat - Automated COLMAP Dataset Generator 这类 UE5 插件的核心工作流：在三维场景里批量布置虚拟相机，使用 Cycles 自动渲染大量训练图，并直接输出 COLMAP 兼容的相机内参、相机位姿和稀疏点云文件，避免人工逐张摆相机和截图。

它不会训练 Gaussian Splat，也不会调用 COLMAP 做特征匹配。它利用 Blender 场景中已知的真实相机位姿生成 COLMAP 文本模型，因此特别适合合成数据、产品展示、数字资产、室内空间、虚拟扫描和可控训练集制作。

## UE5 插件功能解读与 Blender 对照

UE5 同类插件通常解决四个痛点：

1. 自动采集视角  
   UE 插件会围绕物体、沿路径或在空间中自动放置 CineCamera。本插件对应提供产品球面、产品半球、产品圆柱、半圆柱、路径曲线、体积网格和现有相机七种模式。

2. 自动渲染训练图  
   UE 插件通过 Movie Render Queue 或内部渲染接口批量输出图片。本插件默认使用 Blender Cycles 路径追踪渲染器输出训练图，写入 `images/` 中的 PNG 或 JPEG，并支持增量渲染，已有图片不会重复覆盖。

3. 生成 COLMAP 数据结构  
   UE 插件会导出 `cameras.txt`、`images.txt`、`points3D.txt` 等 COLMAP 文件，让 3DGS 训练器跳过重建或直接读取位姿。本插件输出相同的 `sparse/0/` 目录，并额外输出 `transforms.json`，方便 Nerfstudio、Instant-NGP 风格工具链读取。

4. 生成辅助训练数据  
   UE 插件常见能力包括深度、遮罩、CustomDepth、渲染报告和采集质量检查。本插件提供可选 `depth/` OpenEXR 深度图、`masks/` 黑白遮罩、材质颜色估计的稀疏点云，以及 `dataset_report.json` 报告。

## 安装

1. 在 Blender 5.1 中打开 `Edit > Preferences > Add-ons`。
2. 点击 `Install from Disk...`。
3. 选择交付的 `blender_gs_colmap_exporter.zip`。
4. 启用 `Render: Gaussian Splat COLMAP Dataset Generator`。
5. 在 3D 视图按 `N` 打开右侧侧栏，进入 `GS` 标签页。
6. 如果 3D 侧栏没有显示，也可以在右侧属性编辑器的 `渲染属性` 中打开 `GS Dataset` 面板。

也可以把 zip 拖入 Blender 窗口，按提示安装并启用。安装新版时建议先禁用旧版插件，再安装新版 zip，或重启 Blender 后重新启用。

## 快速开始

1. 在场景中放入要采集的模型。
2. 将 3D 光标放在采集中心，或选择一个空物体作为“注视目标”。
3. 在 `输出目录` 选择一个空文件夹。
4. 选择 `产品半球`、`产品球面` 或路径科学规划。
5. 设置相机数量，例如 120。
6. 确认 `渲染器` 为 `Cycles`，设置 Cycles 采样数和是否降噪。
7. 点击 `创建相机阵列`，选中一条路径后进入 `单路径相机检查` 检查分布和朝向。
8. 点击 `渲染数据集`。

完成后目录结构如下：

```text
your_dataset/
  images/
    frame_0001.png
    frame_0002.png
  sparse/
    0/
      cameras.txt
      images.txt
      points3D.txt
  transforms.json
  dataset_report.json
```

如果启用了深度和遮罩，还会生成：

```text
your_dataset/
  depth/
    frame_0001.exr
  masks/
    frame_0001.png
```

## 相机阵列模式

产品球面：相机分布在完整球面上，适合需要上下左右完整覆盖的物体。

产品半球：相机分布在上半球，适合桌面产品、车辆、角色、雕塑等常见展示对象。

产品圆柱：多层环绕拍摄，适合建筑、室内、长条形资产。

半圆柱：只采集物体一侧，适合墙面、舞台、橱窗、不可绕行场景。

路径曲线：沿曲线长度均匀采样相机位置，适合定制飞行路线或室内漫游。可选择固定相机数量，也可按路径密度自动计算数量。路径模式不强制要求注视目标。

体积网格：在一个盒形空间内生成相机，适合房间、隧道、园区等内部扫描。可以设置排除集合，避免相机落入墙体或障碍物包围盒内。

现有相机：使用场景已有相机或 `GS_COLMAP_Cameras` 集合内的相机，只导出位姿和渲染。

## 单路径轻量相机检查

在 3D 视图中选中一条路径曲线，然后在 N 面板点击 `孤立所选路径并查看相机`，也可以按 `Alt + Shift + I`。

检查模式只隐藏路径集合中的其他曲线，以及插件生成相机的 Blender 原生大线框。墙体、楼板、家具、装饰和其他场景内容保持可见，当前路径还会临时置顶，便于结合空间关系判断相机是否覆盖低位空隙和细部区域。

青色点表示相机光心，橙色短线表示镜头本地 `-Z` 朝向。`相机点大小` 使用屏幕像素，`朝向线长度` 使用米制；`穿透显示` 开启时，代理可以透过家具或墙体显示。移动或旋转相机后点击 `刷新` 更新缓存。

再次点击 `退出并恢复` 或按 `Alt + Shift + I`，插件会恢复进入检查前每条路径和每台相机的隐藏状态。轻量代理由 GPU 批量绘制，不会创建对象、Mesh 或材质。

旧版绿色金字塔代理已经移除。插件加载文件、生成相机或进入检查模式时，会删除 `GS_CAMERA_MESH_STYLE` 残留对象并恢复真实相机原先的显示尺寸。

## CAD 平面图站点配额

此功能默认关闭。路径规划完成后，在路径设置中勾选 `启用站点配额平面图`，再点击 `生成并打开 CAD 平面图`。插件会临时切换到正交 Workbench 渲染，在路径覆盖范围周围生成灰白户型底图，然后将当前区域切换为图像编辑器。原场景的相机、渲染器、输出分辨率、世界背景和对象可见性会在底图生成后恢复。

图中蓝线表示路径，青色点表示常规预计站点，粉色点表示框选配额站点。先填写 `新区域站点数`，点击 `输入数量并在图上拖框`，确认数量后在底图上按住左键拖出绿色矩形。矩形与一条或多条路径相交时，输入的数量会按框内各段路径长度分配。

多个区域可以连续创建，但不能重叠，以免同一个站点同时属于两个配额。右侧面板会同时显示每个区域的目标数与实际预计数。若完整细部短线位于框内，而输入值低于它已有的最低采样要求，实际数会高于目标数并明确显示。

点击 `返回 3D 视图` 退出图像工作区。区域配置保存在 `.blend` 中，之后生成球壳或旧六面路径相机时会生效。取消勾选总开关后，所有区域暂时失效，路径采样立即恢复现有算法；区域数据仍保留，方便再次开启。

## Coverage Patch / 样本补齐

这个模块用于第一次规划和渲染之后的局部补拍，不会重新生成或移动原相机。

### 使用流程

1. 保留第一次生成的原始相机和数据集。
2. 打开 3D 视图右侧 `GS` 页签中的 `Coverage Patch / 样本补齐`。
3. 选择补齐模式：`选中对象`、`包围盒区域` 或 `欠覆盖自动检测`。
4. 设置最低/推荐观察次数、目标覆盖率和最大补拍数量。
5. 点击 `生成预览`。状态栏显示补齐前覆盖率、预计新增数和补齐后覆盖率。
6. 在 `PatchCameras_Preview` 中检查；可手动删除单台预览，或清除后重新生成。
7. 点击 `应用补齐`，剩余预览进入 `PatchCameras_Final`。
8. 点击 `仅渲染补齐相机`，只生成 `frame_patch_*` 并更新合并位姿与报告。

### 参数说明

- `最低观察次数`：低于该次数的目标表面优先补齐。
- `推荐观察次数`：达到最低次数后仍可获得较低权重的继续补偿。
- `目标覆盖率`：看见比例和达到最低次数的比例都达到此值才停止。
- `最大补拍数量`：达不到目标时的硬上限，不会无限加图。
- `候选半径`、`安全距离`、`最低重叠率`：控制局部空间、安全和连接质量。
- `允许极向关键帧`：增加上下 pitch，适合地面、天花板和高低位区域。
- `限制在已有路径附近`：只使用目标附近的原路径点作为光心。
- `补齐策略`：在最少相机、最高覆盖、最强连通性之间调整权重。

### 输出兼容

原相机仍使用 `frame_0001...`，补齐相机使用 `frame_patch_0001...`。COLMAP 和 `transforms.json` 同时包含两组相机；`dataset_report.json.coverage_patch` 记录补齐前后指标和历史；`patch_manifest.json` 单列新增相机、图片路径、矩阵和焦距。仅补拍不会改写第一次全量渲染的断点续渲状态。

## 关键参数

语言：切换中文或英文界面。中文翻译为人工精确语义翻译，不是机器直译。

输出目录：数据集根目录。

相机数量：需要生成或渲染的视角数量。高斯泼溅训练常用 80 到 300 张起步，复杂场景可以更多。

半径：相机到目标中心的距离。

焦距：相机镜头焦距，单位为毫米。插件会从 Blender 相机参数换算为 COLMAP 的 PINHOLE 内参。

相机模型：支持透视、全景等距柱状、鱼眼等距和鱼眼等立体角。透视模式导出标准 COLMAP PINHOLE；鱼眼模式导出 OPENCV_FISHEYE 参数；全景等距柱状会写入全景元数据，标准 COLMAP 本身不一定能直接导入该模型，但 `transforms.json` 和渲染图可供支持全景输入的训练流程使用。

全景视场角：鱼眼全景模式的视场角，范围 1 到 360 度。等距柱状全景默认覆盖 360 度。

实时更新相机：开启后，修改相机数量、半径、高度、环数、相机模型、路径密度、曲线细分等参数时，`GS_COLMAP_Cameras` 集合会立即重建。关闭后需要点击 `创建相机阵列` 手动刷新。

路径朝向：路径模式下可选择 `注视目标`、`沿曲线前进` 或 `曲线旋转`。只有选择 `注视目标` 时才需要设置目标；`沿曲线前进` 会按曲线切线方向摆正相机；`曲线旋转` 会使用路径曲线对象自身的世界旋转。

路径数量模式：路径曲线模式下可选择 `固定数量` 或 `按密度`。固定数量使用相机数量滑块；按密度会根据曲线近似长度自动计算相机数量。

路径密度：按密度模式使用的数量密度，单位为“每 Blender 单位多少台相机”。实际相机数约为 `曲线长度 × 路径密度`，并受最大路径相机数限制。

曲线细分：用于近似贝塞尔曲线长度和采样位置。数值越高，曲线分布越精细，但实时重建会略慢。

渲染器：默认使用 Cycles。训练图建议使用 Cycles，因为它能输出更稳定的全局光照、材质和阴影结果。只有在明确需要实时风格或快速预览时才切换到 EEVEE。

Cycles 采样数：Cycles 每张图的采样次数。预览可用 16 到 64，正式训练图建议从 128 起步，复杂光照可以提高到 256 或更高。

Cycles 降噪：开启后减少噪点。对高斯泼溅训练图通常建议开启；如果你需要保留完全原始的路径追踪噪声，可以关闭。

Cycles 设备：`自动` 会沿用 Blender 当前设置；`GPU` 会请求 GPU 渲染；`CPU` 会请求 CPU 渲染。是否真正使用 GPU 还取决于 Blender 偏好设置中的 Cycles 计算设备。

Cycles 后端：可保持 `自动`，也可显式选择 `HIP`（AMD）、`CUDA`/`OptiX`（NVIDIA）、`oneAPI`（Intel）或 `Metal`（Apple）。选择具体后端会强制使用 GPU；该后端不可用时明确回退到 CPU，不会偷偷切换到另一种 GPU 后端。

HIP 内存安全：默认开启。HIP 使用短后台批次（默认每个 Blender 工作进程 1 帧）、关闭跨帧 Persistent Data，并在每帧后释放 Render Result；显存/内存不足时监督器还会自动减半批次重试。需要提高吞吐量时，可在确认显存余量后增大 `HIP 每进程帧数`。

HIP 显存不足转 CPU：默认开启。若单张图本身就无法在 HIP 上分配 Cycles 缓冲，插件会释放缓存并用 CPU 重试该帧；CPU 也无法分配时仍会报告原始错误，不会生成不完整图片。

Cycles Persistent Data：非 HIP 安全模式下默认开启，在单批内复用 Cycles BVH、纹理和渲染数据以提高多相机吞吐量；HIP 内存安全模式会自动覆盖为关闭。批次结束后工作进程仍会退出并释放全部缓存。

后台渲染：默认开启。插件先保存临时场景副本，再由轻量监督进程调度多个独立 Blender 工作进程。平衡吞吐量的默认值为每批最多 500 帧，可用 `每进程帧数` 修改。每批结束后验证全部产物，工作进程退出并释放 RAM、VRAM、Cycles BVH、纹理缓存和降噪器状态，随后才启动下一批。

取消后台渲染：会终止监督进程及当前工作进程，已经完整提交的图片保留。

后台任务文件：任务文件位于系统临时目录的 `gs_colmap_jobs/<输出路径哈希>/`，避免污染数据集目录。其中 `background_render.log` 是汇总日志，`chunk_*.log` 是逐批日志，`chunk_history.json` 记录起止帧、PID、重试、峰值 RAM/VRAM 和错误检测结果。

同步渲染兜底：如果不想开独立后台进程，可以关闭 `后台渲染`，插件会回到原来的同步渲染方式。同步方式会占用 Blender 主线程，渲染期间前台会卡顿。

增量渲染：如果输出图片已经存在，跳过该视角，便于中断后继续。

每视角点云采样：每个相机用射线投射采样场景表面点，写入 `points3D.txt`。设为 0 可关闭。

点云去重尺寸：越大点云越稀疏，越小点云越密。

深度：输出全场景深度图，格式可选 **EXR（float 线性米）** 或 **PNG（16-bit 毫米）**。

单物品深度 / 单物品 Mask：用（自动、临时、不存储的）ID 图把场景按物品切分，分别输出每个物品的深度与黑白遮罩。

## 色彩与曝光（修复过曝）

训练图的色彩由「Color / 色彩」下拉决定，三档：

- **AgX（默认，推荐）**：高光自动滚降，亮场景**绝不过曝**，颜色自然，专业 GS 采集常用。
- **Filmic**：经典电影感曲线，也不过曝。
- **Standard（忠实 sRGB）**：无色调曲线、线性保真，但**亮场景会削顶过曝**——此时用「Exp / 曝光」滑块给负值把画面压回正常范围。

> 深度图、ID 图、单物品深度/Mask**始终用 Raw 线性**渲染，不受上面色彩档影响，所以深度值是真实物理量、ID 颜色精确可解码。
> 各通道各自独立保存/恢复渲染状态，互不污染——开启这些通道后训练图不会再过曝。

## 多通道输出（深度 / 单物品深度 / 单物品 Mask）

在渲染框的「GS Passes / 多通道输出」里勾选，可与训练图**一次性同时**产出，整合在同一个输出目录：

- **Depth / 深度图**：全场景深度（相机 View-Z）。**Depth Format / 深度格式** 二选一：
  - **EXR（float 线性米）**：`depth/<帧>.exr`，32-bit，存真实线性米，背景透明。
  - **PNG（16-bit 毫米）**：`depth/<帧>.png`，16-bit 灰度，像素值 = 深度×1000（毫米，最大 65.5m）。还原真实距离：`米 = 像素16位 / 1000`。`dataset_report.json` 里记录了 `depth_png_scale_mm`。
  （已**移除**旧的「深度预览图 / Depth Preview PNG」。）
- **Per-object Depth / 单物品深度**：用 ID 图把全场景深度按物品**切分**，每物品一个文件夹：`objects/<物品名>/depth/<帧>.(exr|png)`（跟随上面的深度格式；遮挡正确，只保留相机实际看到的部分）。
- **Per-object Mask / 单物品 Mask**：每物品一张**黑白二值遮罩**（该物品=白，其余=黑），供高斯泼溅合成软件抠单个物体：`objects/<物品名>/mask/<帧>.png`。
- **ID 图（自动、临时、不存储）**：勾选「单物品深度」或「单物品 Mask」时**自动**用 1 采样+BOX 滤镜渲染成精确纯色 ID 图，用于切分，**用完立即删除，不写进数据集**（不再有独立勾选项，也没有 `id/` 文件夹）。`objects/items.json` 记录 物品名→所含物体。切分时**严格按颜色匹配**，所以每物品只含自己的像素，不混入其他区域。
- **Item / 物品粒度**：决定「一个物品」如何界定——
  - **顶层组/Empty（默认）**：一个 Empty 下的所有网格算一个物品（从 UE 同步来的房型=1个、每件家具=1个）；未分组网格各算一个。
  - **每个网格物体**：每个 mesh 各算一个。
  - **每个集合 Collection**：每个 Blender 集合算一个。

> **断点续渲**：每帧渲完（含切分）才写检查点；因 ID 不存储，恢复时未完成的帧会**整帧重渲**——临时重生成该帧 ID 图并重新切分，所以不需要保留 ID 也能正确续渲。

输出目录结构示例（以 PNG 深度为例）：

```
output/
  images/      frame_0001.png ...        # 训练图（AgX，正常曝光）
  depth/       frame_0001.png ...        # 全场景深度（16-bit 毫米；或 .exr 线性米）
  objects/
    items.json                           # 物品名 → 所含物体
    House/depth/  frame_0001.png ...      # 单物品深度（跟随深度格式）
    House/mask/   frame_0001.png ...      # 单物品黑白遮罩
    ChairA/depth/ frame_0001.png ...
    ChairA/mask/  frame_0001.png ...
  sparse/0/    cameras.txt images.txt points3D.txt
  transforms.json  dataset_report.json
```

## 断点续渲 / 渲染时长

- **断点续渲（Resume）**：每帧原子提交后更新状态。启动时会把状态与磁盘上的 RGB、Depth、ID 和对象输出交叉验证；删除 `images` 中某一张或从某张删到末尾后，插件会从首个真实缺帧继续。状态文件丢失时，具有完整提交记录的已有帧仍会跳过；损坏或截断文件会自动补渲。默认开启。
- **分段恢复**：监督器从首个缺帧直接建立下一批，不会为空的完整批次反复启动进程。每批异常只自动重试一次，仍失败则保留已完成帧并停止队列。
- **重渲（Restart）**：想从第 1 张重新开始时，点渲染框里的 **Restart / 重渲** 按钮（可勾选连同已渲染的帧一起删）。**注意：进度条只是状态显示，拖动它不会重置进度**——要重来请用 Restart。改了分辨率/相机数/通道等设置会自动判定为新任务从头渲。
- **渲染时长**：后台渲染状态栏会实时显示**已用时 + 预计剩余（ETA）**，完成后显示总用时（如 `Done: 120 frames in 26m18s`）。

## 训练工具兼容说明

COLMAP 文本模型位于 `sparse/0/`，图片位于 `images/`。许多 Gaussian Splatting 工具可以直接读取这种目录结构。

如果训练器要求二进制 COLMAP 模型，可以在安装 COLMAP 后运行：

```bash
colmap model_converter --input_path sparse/0 --output_path sparse/0 --output_type BIN
```

如果训练器要求真实 SfM 特征点，建议使用本插件导出的图像作为输入，再用 COLMAP 重新匹配；如果训练器接受已知相机位姿，本插件生成的文本模型可以直接使用。

## 注意事项

- 插件默认使用 Cycles 渲染训练图；渲染质量由灯光、材质、Cycles 采样数、降噪和设备设置决定。
- 插件默认使用后台 Blender 进程渲染数据集，前台面板通过进度文件显示进度。
- 插件默认使用 PINHOLE 相机模型，不导出畸变参数。
- 如果使用全景等距柱状相机，请确认你的高斯泼溅训练器支持全景图或能读取 `transforms.json` 中的全景元数据。
- 所有相机共享同一套内参；如果使用现有相机，请保持镜头和分辨率一致。
- 遮罩渲染会临时替换材质，完成后会恢复。
- 深度渲染会临时添加合成节点，完成后会移除。
- 大规模数据集建议先用低分辨率试跑 10 到 20 张，确认构图和输出目录正确后再正式渲染。

## 科学三层路径覆盖（v1.1.48）

### 采集模式与兼容

路径曲线区域新增 `六面立方体兼容` 与 `科学三层覆盖（推荐）`。旧 `.blend` 默认仍使用六面兼容：原 `expand_to_cubemap` 继续按 `px/nx/py/ny/pz/nz` 顺序生成同光心 90 度透视相机，名称、数量、方向和输出不变。科学模式不调用六面函数，即使旧相机模型仍为 `PANORAMA_CUBE`，也只生成分布式透视相机。

### 空间采样网络

- 自动排线复用原地面/天花板、水平净空、连通域、门洞和防穿模检测。
- 普通房间按可行走单元的 PCA 主轴生成平行主线，每约两条主线增加一条垂直横线。
- 狭窄走廊和玄关按双侧净空收敛到中轴；L 形转角、门洞和多 Curve 交叉位置标记为关键节点。
- Curve 不再强制首尾连接成蛇形。每个局部区域固定水平 Z，不生成 Z 向斜坡。
- 科学模式自动排线只生成一套 `Base` 网络，再按真实 floor/ceiling 投影为 2、3 或 4 层；手动 Curve 和多 Curve Collection 继续支持。

### 高度、间距与单位

每个候选 XY 向上下射线取得 `floor_z`、`ceiling_z`，令 `H = ceiling_z - floor_z`：

```text
vertical_clearance = clamp(0.12 * H, 0.30 m, 0.45 m)
low_z    = floor_z + vertical_clearance
middle_z = (floor_z + ceiling_z) / 2
high_z   = ceiling_z - vertical_clearance
```

低矮空间自动压缩安全边界；2 层和 4 层在上下边界间均匀分布。六个基础光心沿弧长使用 `[-0.40, -0.24, -0.08, +0.08, +0.24, +0.40] * local_step`，端点裁剪并按 1 mm 容差去重。急转角前后各补半个局部步长。

真实 FOV 由当前焦距、36 mm 传感器和输出宽高计算。水平探测射线首个命中距离的 P40 作为 `reference_depth`：

```text
step_max = 2 * reference_depth * tan(horizontal_fov / 2) * (1 - target_overlap)
local_step = clamp(step_max, minimum_step, maximum_step)
```

默认重叠 0.70、间距 0.25-0.65 m、安全距离 0.25 m、最大转向 15 度。所有米制参数通过 `scene.unit_settings.scale_length` 换算；焦距、传感器、分辨率和导出内参不会随位置变化。

### 相机位置和朝向

每个名义站点的基础分配为：低层 `+20°/phase+0°`，中层 `0°/phase+60°`，高层 `-20°/phase+120°`，低层 `+20°/phase+180°`，中层 `0°/phase+240°`，高层 `-20°/phase+300°`。`phase` 在路径切线角基础上每站增加 15 度。

候选 Yaw 步长为 `min(30 度, horizontal_fov*0.4)`；低/中/高层 Pitch 分别为 `+10/+25`、`-10/0/+10`、`-25/-10` 度。端点、路径弧长中点、交叉点和急转角提供 `+55/-55` 度关键帧。相机保持 Blender `-Z` 前向、`Y` 上向、Roll=0，不修改 COLMAP 或 transforms 坐标约定。

### 覆盖选择和重叠修复

规划采用两阶段射线检测。全部 Yaw/Pitch 候选先使用最终网格子集形式的 4x4 规则射线预筛，并以全部合法候选命中的单元作为“可达且可见”分母；最终入选相机再按快速 8x8、普通 12x12 或高质量 16x16 完整复检。报告中的 `prefilter_ray_grid` 与 `ray_grid` 分别记录两阶段网格。

命中记录对象、面、世界位置/法线、距离、观察方向、入射角、候选 ID 和表面类别。单元尺寸为 `clamp(scene_diagonal/300, 0.03 m, 0.15 m)`，键包含对象、Polygon、量化位置和法线，大 Polygon 不会只算一个单元。低分辨率射线按距离和角间距计算 1-6 格切平面足迹，同一相机对同一单元只计一次。

选择先按名义站点均匀抽样，并完整保留每站低/中/高层六个分布式槽位，避免扁平索引抽样破坏层和 Yaw 平衡。默认预算为旧站点数 x 6，再乘图片预算倍率。完整复检后，对总体欠覆盖优先在同一合法光心改变 Yaw/Pitch；再以 `-55°/+55°` 修复地面/天花板；最后用完整质量数据修复强邻居和连通分量。替换不增加图片、不改变相机位置或内参。

候选评分依次考虑新覆盖、欠观察、角度多样性、视差和方向连续性，并惩罚高入射角、重复视图和极端距离。入射角超过 75 度不计高质量观察；方向差异按约 15 度分箱。

最终视图以共同表面建立重叠图，强邻居默认要求 50% 共同可见表面且具有至少 10% 局部步长的位置基线。图不连通且预算已满时，从最大分量移除一台高冗余、非关键、非唯一层相机，再从未选候选中加入跨分量桥接视图。若某相机不足两个强邻居，在同一光心改选 Yaw/Pitch。默认三层至少各保留一台相机，修复不改变图片预算或内参。

候选光心使用缓存场景 BVH 的精确最近表面查询，并以三方向奇偶射线排除 Mesh 内部点；合法候选仍会经过原有碰撞推出逻辑作为最终防线。总体、分类和邻居修复各自维护局部计数，完整 `observation_count` 报告只在全部替换稳定后构建一次，避免大图片预算重复展开相同覆盖单元。

### 进度、调试和报告

`创建科学相机阵列` 是模态任务，候选预筛和最终质量复检都分批执行，可按 Esc 或点击取消。正式相机只在规划完成后一次性替换，取消不留下半成品。

调试对象只放入 `GS_SCIENTIFIC_PATH_DEBUG`：分层路径使用不同颜色，删除候选为灰色，欠覆盖为红点，极向相机和重叠边单独着色。每次规划前只清理该集合，避免调试几何进入射线检测，不删除用户对象。

`dataset_report.json` 保留原字段并增加 `camera_planning`：模式、旧/新预算、层数、步长、重复光心、覆盖单元、整体/分类/逐对象覆盖、至少 1/3/5 次观察、欠覆盖/不可达单元、连通分量、强邻居缺口、极向/冗余/桥接数量、安全失败原因、预筛/最终射线网格和 FOV。

### Blender 5.1 验收

自动测试覆盖空房、客厅、桌底遮挡餐厅、窄走廊、L 形走廊、多房间、不规则墙体、低矮空间、大型开放空间、手动多 Curve 和 `scale_length=0.01`。另有旧六面固定基线、确定性/调试清理、真实 Cycles RGB/深度/ID/对象通道、断点续渲、独立后台 Blender、扩展 zip 校验。

普通 12 x 12 质量、旧预算 720 张图的最终自动验收结果：

| 指标 | 结果 |
| --- | --- |
| 十场最终图片数 | 每场 720 / 旧预算 720 |
| 总体可见表面覆盖 | 96.218% - 100.000% |
| 地面覆盖 | 81.923% - 100.000%，无整类零覆盖 |
| 天花板覆盖 | 82.197% - 100.000%，无整类零覆盖 |
| 重复光心 | 十场均为 0（1 mm 容差） |
| 重叠图 | 十场均为 1 个连通分量，弱邻居 0 |
| 最终安全 | 全部相机通过 60 方向安全距离检查，Roll=0，内参一致 |

代表性客厅默认预算结果为总体 98.097%、地面 95.383%、天花板 95.312%、竖直面 98.579%，11 个极向关键帧。相同用例在本次性能修复前后的一次本机对照为 56.5 秒降至 37.9 秒；实际时间仍随 Mesh 数量、候选数量、CPU 和射线质量变化。

完整逐场数据保存在 `tests/acceptance_results.json`，默认客厅指标保存在 `tests/default_budget_quality.json`。

默认预算质量指标由 `tests/default_budget_quality.json` 保存；验收使用全部合法候选可见面作为分母，不用“最终相机自己看到的表面”制造接近 100% 的循环统计。

### 已知限制

- `unreachable_surface_cells` 是 evaluated mesh 表面采样与全部合法候选射线的保守估算，极细小或复杂修改器表面可能受采样上限影响。
- 图片预算显著低于默认 720 张时，报告会如实显示覆盖不足；插件不会通过缩小可见面分母伪造 95% 达标。
- PCA 网格以可行走栅格逼近不规则轮廓；非常窄的门缝需降低探测间距或安全边距。
- 交互式创建支持模态取消；后台自动建相机使用同步确定性规划，由后台任务取消机制管理。

## 科学位姿序列（v1.2.2）

### 选择实现方式

先选择 `路径曲线 > 科学三层覆盖`，再在 `Realization Backend` 中选择：

- `Legacy Cubemap Objects`：旧六面兼容，由原有六面函数负责。
- `Scientific Camera Objects`：每个科学视角保留一个真实相机，兼容旧工程、调试和对照测试；这是新属性的安全默认值。
- `Scientific Pose Sequence (Recommended)`：每个科学视角保存为 PoseSample，只保留 `GS_CAPTURE_CAMERA` 一台真实相机。

单相机模式不减少图片预算。面板分别显示 Blender 相机对象数、规划姿态数、训练帧数和 Segment 数，避免把四个概念混称为“相机数”。点击 `规划科学位姿序列` 后生成 `camera_sequence.json`。

### camera_sequence.json

清单保存共享内参、源场景帧、场景/规划/输出设置哈希、Segment 和所有帧。世界矩阵是唯一权威旋转数据；JSON 中的 location 和 rotation_quaternion 仅由矩阵序列化得到，不维护可能冲突的 Euler 角。

一个 PoseSample 包含逻辑帧号、COLMAP IMAGE_ID、Segment/段内顺序、Curve/弧长/高度层、类型、最终矩阵、FOV、覆盖/重叠/近场信息、Patch/Polar/Bridge 标志、RGB/Depth/ID/Object Depth/Mask 路径和渲染状态。

多 Curve、不同高度层、Polar、Bridge 和 Coverage Patch 分成独立 Segment。段内按 50% 重叠、30% 空间邻近、20% 朝向连续性进行确定性贪心排序；段之间直接逻辑跳转，不生成斜飞、穿墙或插值训练帧。

### 正式渲染与时间轴预览

正式序列渲染的每个逻辑帧都执行以下流程：

1. 把 Blender 场景固定到 `Source Scene Frame`。
2. 从清单读取 PoseSample，把完整 `matrix_world` 赋给主相机。
3. 更新依赖图并校验活动相机、位置误差、旋转误差和共享内参哈希。
4. 强制关闭 Motion Blur 和主相机 DOF，渲染 RGB 及所有已启用 Pass。
5. 在 `_gs_tmp/frame_XXXXXX` 暂存产物，全部成功后移动到正式路径并写 `_gs_frame_commits`。
6. 原子更新清单状态为 `COMPLETE`；失败则写 `FAILED` 和错误信息。

正式渲染从不调用 `bpy.ops.render.render(animation=True)`，因此场景物体、灯光、材质、几何节点和模拟不会随逻辑训练帧推进。渲染结束会恢复原活动相机、场景帧、输出路径、主相机矩阵、Motion Blur 和 DOF 状态。

`Create Preview` 只为视口检查创建关键帧：主相机使用 `QUATERNION`，相邻四元数保持同号，位置线性、旋转平滑，时间轴 Marker 标识 Segment 起点。清除预览不会改变清单。正式渲染、COLMAP 和 transforms 从不读取这些关键帧。

### 恢复、导出与 Patch

恢复读取 `camera_sequence.json`，校验场景、规划设置、输出设置和内参哈希，并检查提交清单中记录的每个实际文件。完整帧跳过；缺文件、`FAILED` 或中断在 `RENDERING` 的帧按原 ID 重渲。序列一旦开始渲染即冻结顺序。

COLMAP 与 `transforms.json` 都读取 PoseCameraAdapter：前者继续复用原 `blender_to_colmap` 坐标转换，固定内参帧共享 CAMERA_ID；后者在顶层保存固定内参，每帧保存同一世界矩阵和严格一致的 RGB/Depth/ID 路径。面板提供 `Export transforms.json Only`，原 `仅导出 COLMAP` 流程仍输出完整稀疏模型。

Patch 操作流程不变，但序列模式的确认结果会追加到清单末尾的新 Patch Segment：

- 旧 logical_frame_id、IMAGE_ID、图片路径和排序全部保留。
- 新 Patch 使用新 IMAGE_ID 和 `frame_patch_XXXXXX`。
- `仅渲染补齐` 只选择 `is_coverage_patch` 的新增 PoseSample。
- 导出后合并更新 COLMAP、transforms、dataset_report 和 patch_manifest。
- 转换完成后删除正式 Patch CAMERA 对象，场景仍只有主相机。

### 调试显示

`Pose Display` 提供 Off、Current Pose、Current +/- N、Every N Poses 和 All Lightweight。显示对象是放在 `GS_SCIENTIFIC_PATH_DEBUG` 中的轻量 Empty，并按 Segment 着色；刷新/清除只处理带序列调试标记的对象，不删除用户对象。

### 限制

- 序列模式要求透视相机和固定内参；规划后修改焦距、传感器、分辨率、Pass 或关键规划参数会明确中止，需重新规划。
- 序列清单属于生成它的场景和规划；把输出目录切换到另一场景已有的清单会因 planning hash 不一致而拒绝。
- 多进程分片尚未实现；后台模式使用一个独立 Blender 场景副本和一台主相机顺序渲染。
